Added index html page and documentation

--- a/src/main/asciidoc/breach.adoc
+++ b/src/main/asciidoc/breach.adoc
@@ -1,5 +1,9 @@
-= Fireeye Pwned Breach Service Documentation
+= Fireeye Pwned Service Documentation
 
+Welcome to FireEye Pwned Service documentation.
+Please read through to understand the various endpoints supported.
+
+= Breach Service
 This is the documentation of the service running at http://localhost:8080/pwned
 It retrieves breaches by varying combinations.
 The documentation is heavily derived from the original Pwned website https://haveibeenpwned.com
@@ -12,6 +16,9 @@ The most common use of the API is to return a list of all breaches a particular 
 include::{snippets}/account-breach/http-request.adoc[]
 
 Following are option request parameters that endpoint allows to modify the response
+
+.Path Parameters
+include::{snippets}/account-breach/path-parameters.adoc[]
 
 .Request Parameters
 include::{snippets}/account-breach/request-parameters.adoc[]
@@ -29,6 +36,9 @@ Sometimes just a single breach is required and this can be retrieved by the brea
 
 .Sample Request
 include::{snippets}/name-breach/http-request.adoc[]
+
+.Path Parameters
+include::{snippets}/name-breach/path-parameters.adoc[]
 
 == Breach Response Model
 
@@ -48,5 +58,66 @@ include::{snippets}/breach-dataclasses/http-request.adoc[]
 
 .Response
 include::{snippets}/breach-dataclasses/http-response.adoc[]
+
+
+= Paste Service
+
+This is the documentation of the service running at http://localhost:8080/pwned
+The documentation is heavily derived from the original Pwned website https://haveibeenpwned.com
+
+== Getting all pastes for an account
+
+The API takes a single parameter which is the email address to be searched for. Unlike searching for breaches, usernames that are not email addresses cannot be searched for. The email is not case sensitive and will be trimmed of leading or trailing white spaces. The email should always be URL encoded.
+
+.Sample Request
+
+include::{snippets}/paste/http-request.adoc[]
+
+. Request Path Parameters
+include::{snippets}/paste/path-parameters.adoc[]
+
+== Paste Response Model
+
+include::{snippets}/paste/response-fields.adoc[]
+
+== Paste Sample Response
+
+include::{snippets}/paste/http-response.adoc[]
+
+
+= Password Service
+
+This is the documentation of the service running at http://localhost:8080/pwned
+
+Pwned Passwords are more than half a billion passwords which have previously been exposed in data breaches.
+Each password is stored as a SHA-1 hash of a UTF-8 encoded password. The downloadable source data delimits the full SHA-1 hash and the password count with a colon (:) and each line with a CRLF.
+
+The documentation is heavily derived from the original Pwned website https://haveibeenpwned.com
+
+== Searching by range
+
+In order to protect the value of the source password being searched for, Pwned Passwords also implements a k-Anonymity model that allows a password to be searched for by partial hash. This allows the first 5 characters of a SHA-1 password hash (not case-sensitive) to be passed to the API.
+
+.Sample Request
+
+include::{snippets}/password/http-request.adoc[]
+
+. Request Path Parameters
+
+include::{snippets}/password/path-parameters.adoc[]
+
+
+== Password Sample Response
+
+When a password hash with the same first 5 characters is found in the Pwned Passwords repository, the API will respond with an HTTP 200 and include the suffix of every hash beginning with the specified prefix, followed by a count of how many times it appears in the data set. The API consumer can then search the results of the response for the presence of their source hash and if not found, the password does not exist in the data set.
+
+A sample response for the hash prefix "ABCDE" would be as follows:
+
+include::{snippets}/password/http-response.adoc[]
+
+
+
+
+
 
 
